# factall

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/factall/: __init__.py
